# electrosphere

./: .gitignore  Cargo.toml  LICENSE
crates/esph-core/: Cargo.toml
crates/esph-core/src/: config.rs  context.rs  error.rs  lib.rs  node.rs  token.rs
crates/esph-core/src/fs/: backend.rs
crates/esph-etc/: Cargo.toml
crates/esph-etc/src/: cluster.rs  lib.rs  local.rs  store.rs
crates/esph-fs/: Cargo.toml
crates/esph-fs/src/: lib.rs
crates/esph-fs/src/juicefs/: manager.rs
crates/esph-proto/: Cargo.toml  build.rs
crates/esph-proto/proto/esphd/v1/: cluster.proto  daemon.proto
crates/esph-proto/src/: lib.rs
crates/esphctl/: Cargo.toml
crates/esphctl/src/: cli.rs  client.rs  main.rs
crates/esphctl/src/commands/: init.rs  mod.rs  mount.rs  ps.rs  restart.rs  start.rs  status.rs  stop.rs
crates/esphd/: Cargo.toml
crates/esphd/src/: context.rs  main.rs  master.rs  server.rs  worker.rs
