[workspace]
resolver = "2"
members = [
    "crates/esph-core",
    "crates/esph-proto",
    "crates/esph-etc",
    "crates/esph-fs",
    "crates/esphd",
    "crates/esphctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/MahnoKropotkinvich/electrosphere"

[workspace.dependencies]
# Internal crates
esph-core = { path = "crates/esph-core" }
esph-proto = { path = "crates/esph-proto" }
esph-etc = { path = "crates/esph-etc" }
esph-fs = { path = "crates/esph-fs" }

# Async
tokio = { version = "1", features = ["full"] }

# gRPC / Protobuf
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.13"
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Storage
rocksdb = "0.23"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
nix = { version = "0.30", features = ["signal", "process"] }
sysinfo = "0.34"

# Time / ID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# XDG paths
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Async trait
async-trait = "0.1"
