[package]
name = "esph-etc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
esph-core = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
